Alterando o inpu por um select

--- a/PROJETOS/cafeteria/frontEnd/HOME/index.html
+++ b/PROJETOS/cafeteria/frontEnd/HOME/index.html
@@ -28,8 +28,13 @@
             <img src="../imgs/cute-love.gif" alt="user" height="50vh" id="abrirMenu">
         </nav>
         <div class="procurar"> 
-            <input type="search" placeholder="Procure seu café favorito" id="procure"/>
-            <img src="../imgs/lupa.png" alt="procure">
+            <select placeholder="Procure seu café favorito" id="procure">
+                <option value="1">Cafés</option>
+                <option value="2">Chá</option>
+                <option value="3">Chocolates</option>
+                <option value="4">Comidas</option>
+            </select>
+
         </div>
     </header>
     <main>
