edição da rota no backend para a colocação de um filtro no frontend que ao mudar, transforma-se todo o main, seguindo a rota criada no backend

--- a/PROJETOS/cafeteria/frontEnd/HOME/index.html
+++ b/PROJETOS/cafeteria/frontEnd/HOME/index.html
@@ -29,6 +29,7 @@
         </nav>
         <div class="procurar"> 
             <select placeholder="Procure seu café favorito" id="procure">
+                <option value="0"></option>
                 <option value="1">Cafés</option>
                 <option value="2">Chá</option>
                 <option value="3">Chocolates</option>
