Alteração do inpu checkbox

--- a/FrontEnd/FORM/index.html
+++ b/FrontEnd/FORM/index.html
@@ -19,7 +19,7 @@
     <!-- Form title -->
     <h1>Contact Us</h1>
     <!-- Definidno a primeira linha do formulario -->
-    <div>
+    <div class="nome">
       <nav>
         <h3>First Name: *</h3>
         <input type="text" required>
@@ -57,7 +57,7 @@
      <div class="termos">
       <nav>
         <input type="checkbox" required>
-        <h3>I consent to being contacted by the team</h3>
+        <p>I consent to being contacted by the team</p>
       </nav>
      </div>
 
