Criando a edição do codigo para dispositivo mobile

--- a/FrontEnd/FORM/index.html
+++ b/FrontEnd/FORM/index.html
@@ -40,7 +40,7 @@
     <div class="QueryType">
       <h3>Query Type: *</h3>
       <nav id="InputRadio">
-        <div><input type="radio" name="General Enquaty"  placeholder='General' id="General">General Enquaty</div>
+        <div><input type="radio" name="General Enquaty" placeholder='General' id="General">General Enquaty</div>
         <div><input type="radio" name="Support Request" id="Support">Support Request</div>
       </nav>
     </div>
@@ -54,12 +54,17 @@
     </div>
 
     <!-- Definindo o termo de concordancia antes de continuar -->
-     <div class="termos">
+    <div class="termos">
       <nav>
         <input type="checkbox" required>
         <p>I consent to being contacted by the team</p>
       </nav>
-     </div>
+    </div>
+
+    <!-- Definindo o botão de envio do formulario -->
+    <button>
+      <p>Submit</p>
+    </button>
 
   </main>
 
