--- a/FrontEnd/FORM/index.html
+++ b/FrontEnd/FORM/index.html
@@ -22,11 +22,11 @@
     <div class="nome">
       <nav>
         <h3>First Name: *</h3>
-        <input type="text" required>
+        <input id="primeiroNome" type="text"/>
       </nav>
       <nav>
         <h3>Last Name: *</h3>
-        <input type="text" required>
+        <input id="ultimoNome" type="text" />
       </nav>
     </div>
 
@@ -62,7 +62,7 @@
     </div>
 
     <!-- Definindo o botão de envio do formulario -->
-    <button>
+    <button onclick="enviar()">
       <p>Submit</p>
     </button>
 
@@ -99,6 +99,7 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
   </div> -->
+  <script src="indesx.js"></script>
 </body>
 
 </html>
