Adequando o input checkbox ao uso, mudando o funcinamento

--- a/FrontEnd/FORM/index.html
+++ b/FrontEnd/FORM/index.html
@@ -43,9 +43,10 @@
     <div class="QueryType">
       <h3>Query Type: *</h3>
       <nav id="InputRadio">
-        <div><input type="radio" name="General Enquaty" placeholder='General' id="General">General Enquaty</div>
-        <div><input type="radio" name="Support Request" id="Support">Support Request</div>
+        <div id="inputG"><input type="radio" name="General Enquaty" placeholder='General' id="General" value="general">General Enquaty</div>
+        <div id="inputS"><input type="radio" name="Support Request" id="Support" value="support">Support Request</div>
       </nav>
+      <p class="requiredInput model">Please select a query type</p>
     </div>
 
     <!-- Definindo o campo para mensagem -->
@@ -85,7 +86,7 @@
   Query Type
   General Enquiry
   Support Request
-  Please select a query type
+  
 
   Message
   This field is required
