Criado e estilizado a barra de pesquisa de pokemons e o button de peswuisa

--- a/PROJETOS/POKEDEX/code/index.html
+++ b/PROJETOS/POKEDEX/code/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../assets/pokebola.png" type="image/x-icon">
+    <!-- Link para usar os icones  -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
     <title>Pokedex</title>
 </head>
@@ -26,15 +28,20 @@
         <!-- Definindo a localização das caracteristicas do pokemon -->
         <nav>
             <div>
-                <img src="../assets/fogo.png" alt="">
-                <p>Caracteristicas</p>
+                <!-- Dfinindo um input para pesquisa de pokemons -->
+                <div class="pesquisa">
+                    <input type="search" name="" id="">
+                    <button type="button"><i class="large material-icons">search</i></button>
+                </div>
+                <!-- <img src="../assets/fogo.png" alt="">
+                <p>Caracteristicas</p> -->
             </div>
         </nav>
 
-        <!-- Definido a localização das setas de avanço-->
+        <!-- Definido a localização das setas de avanço
         <div class="setaAvanco">
             <img src="../assets/direita.png" alt="">
-        </div>
+        </div> -->
 
     </main>
 </body>
