Adicionado o btn de avanço e btn de recuo e o começo da barra de pesquisa

--- a/PROJETOS/POKEDEX/code/index.html
+++ b/PROJETOS/POKEDEX/code/index.html
@@ -30,8 +30,8 @@
             <div>
                 <!-- Dfinindo um input para pesquisa de pokemons -->
                 <div class="pesquisa">
-                    <input type="search" name="" id="">
-                    <button type="button"><i class="large material-icons">search</i></button>
+                    <input type="text" name="" id="inputPesquisaPokemon">
+                    <button type="button" id="buscarPokemon"><i class="large material-icons">search</i></button>
                 </div>
                 <div class="caracteristicas">
                     <div class="nomePokemon">
