Removendo a barra de peswuisa temporariamente

--- a/PROJETOS/POKEDEX/code/index.html
+++ b/PROJETOS/POKEDEX/code/index.html
@@ -28,17 +28,12 @@
         <!-- Definindo a localização das caracteristicas do pokemon -->
         <nav>
             <div>
-                <!-- Dfinindo um input para pesquisa de pokemons -->
-                <div class="pesquisa">
-                    <input type="text" name="" id="inputPesquisaPokemon">
-                    <button type="button" id="buscarPokemon"><i class="large material-icons">search</i></button>
-                </div>
                 <div class="caracteristicas">
                     <div class="nomePokemon">
                         <img src="../assets/fogo.png" alt="">
                         <p id="nome">Nome</p>
                     </div>
-                    <p>Caracteristicas fisicas incluem poderes que podem ser usado de acordo com a fraqueza do proximo
+                    <p id="habilidades">Caracteristicas fisicas incluem poderes que podem ser usado de acordo com a fraqueza do proximo
                         pokemon</p>
                 </div>
             </div>
@@ -56,9 +51,15 @@
         </div>
 
         <!-- Definir o numero do pokemon -->
-         <div id="Npokemon">
+        <div id="Npokemon">
             <h1 id="numeroPokemon">02</h1>
-         </div>
+        </div>
+
+        <!-- Dfinindo um input para pesquisa de pokemons -->
+        <div class="pesquisa">
+            <!-- <input type="text" name="" id="inputPesquisaPokemon"> -->
+            <button type="button" id="buscarPokemon"><i class="large material-icons">search</i></button>
+        </div>
 
     </main>
 
