--- a/PROJETOS/POKEDEX/code/index.html
+++ b/PROJETOS/POKEDEX/code/index.html
@@ -97,6 +97,19 @@
         <div class="modalAjustarCard">
             <h2 id="fecharmodalCard" onclick="FecharModalTelaCard()">X</h2>
             <img id='cardPokemon' src="../assets/cartaAzul.png">
+            <!-- Div de atribuir o nome, vida e a imagem do pokemon na carta -->
+            <div class='atribuicoesCard'>
+                <div id="nomeVida">
+                    <p id="nomePokemonCard">Pokwmon</p>
+                    <p id="vidaPokemon">132</p>
+                </div>
+                <img id="pokemonImagemCarta" src="../assets/pokebola.png">
+            </div>
+            <!-- Div de atribuir a altura e o peso dp pokemon -->
+            <div class="alturaPeso">
+                <p id="alturaPokemon">altura = 1,2</p>
+                <p id="pesoPokemon">peso = 28kg</p>
+            </div>
         </div>
     </nav>
 
