--- a/PROJETOS/POKEDEX/code/index.html
+++ b/PROJETOS/POKEDEX/code/index.html
@@ -110,6 +110,10 @@
                 <p id="alturaPokemon">altura = 1,2</p>
                 <p id="pesoPokemon">peso = 28kg</p>
             </div>
+            <!-- Div de habilidades no card -->
+             <div class="movimentosPokemon">
+                <ul id="movimentos"></ul>
+             </div>
         </div>
     </nav>
 
