--- a/PROJETOS/POKEDEX/code/Tela_Jogo/jogoPokemon.html
+++ b/PROJETOS/POKEDEX/code/Tela_Jogo/jogoPokemon.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <a  href="../index.html"><i class="material-icons">arrow_back</i></a>
+    <a  href="../Tela_Home/index.html"><i class="material-icons">arrow_back</i></a>
 
     <div class="container" id="render-area"></div>
 
