tualização do design e do funcionamento. Falta aterminar de arrumar a div de pesquisa que esta sobreopondo as setas

--- a/PROJETOS/POKEDEX/code/Tela_Home/index.html
+++ b/PROJETOS/POKEDEX/code/Tela_Home/index.html
@@ -93,14 +93,14 @@
     <nav class='ModalCobrirTelaCard modal'>
         <div class="modalAjustarCard">
             <h2 id="fecharmodalCard" onclick="FecharModalTelaCard()">X</h2>
-            <img id='cardPokemon' src="../assets/cartaAzul.png">
+            <img id='cardPokemon' src="../../assets/cartaAzul.png">
             <!-- Div de atribuir o nome, vida e a imagem do pokemon na carta -->
             <div class='atribuicoesCard'>
                 <div id="nomeVida">
                     <p id="nomePokemonCard">Pokwmon</p>
                     <p id="vidaPokemon">132</p>
                 </div>
-                <img id="pokemonImagemCarta" src="../assets/pokebola.png">
+                <img id="pokemonImagemCarta" src="../../assets/pokebola.png">
             </div>
             <!-- Div de atribuir a altura e o peso dp pokemon -->
             <div class="alturaPeso">
