Aperfeiçoando o modal de pesquisa

--- a/PROJETOS/POKEDEX/code/Tela_Home/index.html
+++ b/PROJETOS/POKEDEX/code/Tela_Home/index.html
@@ -78,17 +78,14 @@
     </main>
 
     <!-- Criando a tela de pesquisa de pokemon, como um model que aparece e desaparece -->
-    <nav class='telaPesquisa  '>
+    <nav class='telaPesquisa   '>
         <div class="divCentralPesquisa">
-            <p id="fecharmodalPesquisa">x</p>
+            <h1 id="fecharmodalPesquisa">x</h1>
             <nav>
                 <img src='../../assets/avatar.png' id="imagemModalPesquisa">
                 <input type="text" name="" id="inputPesquisaPokemon">
                 <div class='resultados'>
-                    <ul class="linhaResultado">
-                        <img src='../../assets/avatar.png'>
-                        <p>Dito</p>
-                    </ul>
+                    
                 </div>
                 <button type="button" id="buscarPokemon"><i class="large material-icons">search</i></button>
             </nav>
