Finalizando o modal de pesquisa e inicinado algumas meljhorias no design

--- a/PROJETOS/POKEDEX/code/Tela_Home/index.html
+++ b/PROJETOS/POKEDEX/code/Tela_Home/index.html
@@ -77,13 +77,16 @@
     </div>
     </main>
 
+    <div id="tipoPokemon">
+        <p id="mostrarTipoPokemon">Tipo: Fire</p>
+    </div>
     <!-- Criando a tela de pesquisa de pokemon, como um model que aparece e desaparece -->
-    <nav class='telaPesquisa   '>
+    <nav class='telaPesquisa modal  '>
         <div class="divCentralPesquisa">
             <h1 id="fecharmodalPesquisa">x</h1>
             <nav>
                 <img src='../../assets/avatar.png' id="imagemModalPesquisa">
-                <input type="text" name="" id="inputPesquisaPokemon">
+                <input type="text" name="" id="inputPesquisaPokemon" placeholder='Digite o pokemon...'>
                 <div class='resultados'>
                     
                 </div>
